--- a/lol-doku-frontend/static/lol.css
+++ b/lol-doku-frontend/static/lol.css
@@ -87,6 +87,38 @@ h5 {
     font-size: 1rem;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: Beaufort, serif;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.h1 {
+    font-size: 2.85rem;
+}
+
+.h2 {
+    font-size: 2.1rem;
+}
+
+.h3 {
+    font-size: 1.64rem;
+}
+
+.h4 {
+    font-size: 1.33rem;
+    margin-block-start: 1em; 
+    margin-block-end: 1em; 
+}
+
+.h5 {
+    font-size: 1rem;
+}
+
+.h6 {
+    font-size: 0.86rem;
+}
+
 p {
     font-size: 1rem;
     font-weight: normal;
